# Three-Dimensional-Nozzle-Design-Code-Python

./: .gitignore  README.md
.github/workflows/: release.yml
python/: GUI_README.md  README.md  build_executables.sh  pynozzle_gui.py  pyproject.toml
python/examples/: M3.5Perf.inp  M4Rao.inp  README.md  cone10.inp
python/examples/moc3d/: README.md
python/examples/stt/: README.md
python/pynozzle/: __init__.py
python/pynozzle/common/: __init__.py  constants.py  thermo.py
python/pynozzle/moc2d/: __init__.py  _contoured_kernels.py  _solver_kernels.py  cli.py  grid.py  inp.py  io_writers.py  solver.py
python/pynozzle/moc3d/: __init__.py  cli.py  geo.py  io_writers.py  kernels.py  point.py  solver.py
python/pynozzle/stt/: __init__.py  cli.py  inp.py  io_writers.py  kernels.py  loaders.py  solver.py
python/tests/: test_moc2d_regression.py  test_moc3d_regression.py  test_stt_regression.py
